# SoftwareDesignCourse

lab1/: .gitignore  CMakeLists.txt  lru_cache.hpp  lru_cache_test.cpp
lab10/: pom.xml
lab10/src/main/java/ru/vsklamm/sd/rxjava/: Main.java
lab2/: .gitignore  pom.xml
lab2/src/main/java/ru/vsklamm/reddit/: Main.java
lab2/src/main/java/ru/vsklamm/reddit/api/: TickerStatistics.java
lab2/src/main/java/ru/vsklamm/reddit/client/: PostsListingParser.java  RedditClient.java  RedditHttpClient.java  RedditToken.java
lab2/src/main/java/ru/vsklamm/reddit/config/: PropertiesLoader.java  PropertyNotFoundException.java  RedditConfig.java
lab2/src/main/java/ru/vsklamm/reddit/model/: RedditPost.java
lab2/src/main/resources/: app.properties
lab2/src/test/java/ru/vsklamm/reddit/api/: TickerStatisticsStubServerTest.java  TickerStatisticsTest.java
lab2/src/test/java/ru/vsklamm/reddit/client/: PostsListingParserTest.java
lab3/: .gitignore  pom.xml
lab3/src/main/java/ru/akirakozov/sd/refactoring/: Main.java
lab3/src/main/java/ru/vsklamm/sd/refactoring/: Main.java
lab3/src/main/test/ru/vsklamm/sd/refactoring/: AddProductServletTest.java  GetProductsServletTest.java  QueryServletTest.java
lab4/: pom.xml  toso.sql
lab4/src/main/java/ru/vsklamm/sd/mvc/: Application.java
lab4/src/main/resources/: application.properties
lab4/src/main/resources/templates/: index.html
lab8/: build.gradle
lab8/src/main/java/ru/vsklamm/statistics/: EventsStatistic.java  EventsStatisticImpl.java
lab8/src/test/java/: EventsStatisticImplTest.java  TimeMachineClock.java
(+30 files in other folders)
